Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
Impala 4.0.0
-
ghx-label-12
Description
This backend unit-test failed in tsan build.
[ RUN ] DiskIoMgrTest.WriteToRemotePartialFileSuccess
/data/jenkins/workspace/impala-cdpd-master-staging-core-tsan/repos/Impala/be/build/debug//runtime/io/disk-io-mgr-test: line 10: 1540 Segmentation fault ${IMPALA_HOME}/bin/run-jvm-binary.sh ${IMPALA_HOME}/be/build/latest/service/unifiedbetests --gtest_filter=${GTEST_FILTER} --gtest_output=xml:${IMPALA_BE_TEST_LOGS_DIR}/${TEST_EXEC_NAME}.xml -log_filename="${TEST_EXEC_NAME}" "$@"
Traceback (most recent call last):
File "/data/jenkins/workspace/impala-cdpd-master-staging-core-tsan/repos/Impala/bin/junitxml_prune_notrun.py", line 71, in <module>
if _name_ == "_main_": main()
File "/data/jenkins/workspace/impala-cdpd-master-staging-core-tsan/repos/Impala/bin/junitxml_prune_notrun.py", line 68, in main
junitxml_prune_notrun(options.filename)
File "/data/jenkins/workspace/impala-cdpd-master-staging-core-tsan/repos/Impala/bin/junitxml_prune_notrun.py", line 31, in junitxml_prune_notrun
root = tree.parse(junitxml_filename)
File "/usr/lib64/python2.7/xml/etree/ElementTree.py", line 647, in parse
source = open(source, "rb")
IOError: [Errno 2] No such file or directory: '/data/jenkins/workspace/impala-cdpd-master-staging-core-tsan/repos/Impala/logs/be_tests/disk-io-mgr-test.xml'
Attachments
Issue Links
- is caused by
-
IMPALA-9867 Add Support for Spilling to HDFS
- Closed