IMPALA-10527: Fix DiskIoMgrTest.WriteToRemotePartialFileSuccess failed in tsan build

Fixed a data race issue when running testcase
DiskIoMgrTest.WriteToRemotePartialFileSuccess in the tsan build. The
cause is the TmpFileBufferPool is not released gracefully while
destruction.

Tests:
Reran all testcases of DiskIoMgrTest with tsan and asan build.

Change-Id: I6b0435bf0ee580acb5553527c0ed4f3aa806707f
Reviewed-on: http://gerrit.cloudera.org:8080/17100
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>